fix: session storage